<resources>
    <string name="app_name">ნომრები</string>
    <string name="app_description">ნომრები - ტელეფონის ნომრების ბაზა</string>
    <string name="app_version">Version %1$s</string>
    <string name="app_copyright">Copyright © 2020–%1$d. www.abgeo.dev</string>
    <string name="action_about">აპის შესახებ</string>
    <string name="search_description">მიიღეთ ინფორმაცია ნომრის მფლობელის შესახებ</string>
    <string name="search">ძიება</string>
    <string name="error_phone_number_is_empty">მიუთითეთ ტელეფონის ნომერი!</string>
    <string name="error_no_result">ჩანაწერი ამ ნომერზე ვერ მოიძებნა!</string>
    <string name="phone_number_hint">ტელეფონის ნომერი</string>
    <string name="update_dialog_title">განახლება</string>
    <string name="close">დახურვა</string>
    <string name="update">განახლება</string>
    <string name="new_version_is_available">ხელმისაწვდომია აპლიკაციის ახალი ვერსია - %1$s</string>
    <string name="update_notes_heading">ცვლილებები:</string>
    <string name="release_url_title">ვერსიის ბმული</string>
</resources>
